4.2.1 UNRELEASED
- Remove empty msgid from POT files. BZ #1135143

4.2.0 Thu Aug 28 2014
- Add iframe video support to DocBook5 HTML5. BZ #752021
- Stop calculating column width if no width is set. BZ #1084860
- Simply styling of code, and admonitions in HTML5. BZ #1093498
- Added tip formatting. BZ #1033830
- Remove incorrect prompt. BZ #1096544
- Add "popper" to hide program listing after 4 lines. BZ #1088051
- Fix white space being removed from msgids when merging. BZ #1097090
- Add code language switching. BZ #1092351
- Fix CDATA support, bump XML::TreeBuilder dep to 5.3. BZ #1101050
- Add --showfuzzy to build options.
- Move PO manipulation to Locale::PO.
- Fix inline"\n" not working in verbatim. BZ #1097091 (TODO bump Locale::PO version when released)
- Fix images for DB4 website callouts. BZ #1112899
- Remove newline after cdata. BZ #1110611
- Add Markdown output. BZ #1120455
- Bump Syntax::Highlight::Engine::Kate dep to 0.09.
- Add external link support. BZ #1123193
- Add 'th' to translation block list. BZ #1127462

4.1.7 Mon Aug 04 2014
- Another shot at fixing PDF index out of range error.

4.1.6 Tue Jul 29 2014
- Another shot at fixing PDF index out of range error.

4.1.5 Wed Jul 09 2014
- Add some web UI tranlstaion strings & sort formats. BZ #1117081
- Fix formal para title CSS. BZ #1110076

4.1.4 Thu Jul 03 2014
- Expose sort functions to version index page.

4.1.3 Wed May 21 2014
- Fix extra space breaking spec files with sort_order. BZ #1099262
- Make div.title bold in db4.css. BZ #1049661

4.1.2 Wed May 14 2014
- Fix broken DocBook5 validation stopping package builds. BZ #1097495
- Many updates to Users' Guide.

4.1.1 Thu May 8 2014
- Fix long tables and pre's breaking PDF build. BZ #1095574

4.1.0 Mon May 5 2014
- Add abstract to release notes so PDF builds
- Fix RPM upgrade not pulling in required XML::TreeBuilder version. BZ #1053609
- Allow PDF to build without any authors. BZ #1050975
- Increase XML::LibXSLT::max_depth to 10K. BZ #1035525