@@ -16,5 +16,5 @@ chunk_section_depth: 1
 show_remarks: 1
 type: Book
 toc_section_depth: 5
-condition: prod
+#condition: prod
 
